--- a/configs/raspberrypi_defconfig
+++ b/configs/raspberrypi_defconfig
@@ -5,9 +5,15 @@ BR2_DEFAULT_KERNEL_VERSION="4.0.6"
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_0=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TARGET_GENERIC_GETTY_PORT="tty1"
+
+BR2_TARGET_GENERIC_HOSTNAME="raspberrypi"
+BR2_TARGET_GENERIC_ISSUE="Welcome to Raspberry Pi!"
+BR2_TARGET_GENERIC_ROOT_PASSWD="root"
+
 BR2_ROOTFS_OVERLAY="board/raspberrypi/fs-overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/raspberrypi/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/raspberrypi/post-image.sh"
+
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/raspberrypi/linux.git"
